# github-dependency-graph-test

./: pyproject.toml
tests/fixtures/ansible/: requirements.txt
