[tool.poetry]
name = "dgraph"
version = "0.1.0"
description = ""
authors = ["Arun Babu Neelicattu <arun.neelicattu@gmail.com>"]
readme = "README.md"
packages = [{include = "dgraph", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
